feat(core): 增强LLM客户端功能并重构智能体管理
- 添加默认工具组件支持，可在创建LLMClient时传入默认工具
- 新增基于ChatRequest的简化API，统一请求参数封装
- 添加用户元数据传递功能，支持userId、sessionId等上下文信息
- 重构响应对象为LLMAgentResponse，提供更简洁的API接口
- 新增ChatAgent核心管理类，实现智能体对话流程管理
- 创建AgentSkillRepo接口替代UserAgentRepo，优化技能配置管理
- 添加MemoryManager记忆管理器框架，支持长期记忆功能
- 更新测试用例适配新的API变更和响应对象结构